# OptiPick

./: .gitignore  CLAUDE.md  README.md  conference_paper.md  project_report.md
agent/: CLAUDE.md  pyproject.toml
agent/scripts/: test_api.sh
agent/src/api/: __init__.py  main.py  schemas.py  server.py
agent/src/api/routers/: chatbot.py  compare_products.py  summarize_page.py
agent/src/config/: __init__.py  base.py
agent/src/exceptions/: __init__.py  base.py  llm.py
agent/src/graphs/chatbot/: __init__.py  state.py
agent/src/graphs/chatbot/nodes/: __init__.py  chat_node.py
agent/src/graphs/compare_products/: __init__.py  state.py
agent/src/graphs/compare_products/nodes/: __init__.py  analyze_products.py  collect_user_criteria.py  collect_user_priorities.py  generate_report.py
agent/src/graphs/summarize_page/: __init__.py  config.py  exceptions.py  state.py
agent/src/graphs/summarize_page/domain_parsers/: __init__.py  base.py  registry.py
agent/src/graphs/summarize_page/nodes/: __init__.py  analyze_product_node.py  domain_parser_node.py  filter_images_node.py  ocr_node.py  parse_content_node.py  validate_page_node.py
agent/src/prompts/: __init__.py  analyze_product.py  chatbot.py  compare_products.py  filter_images.py  validate_page.py
agent/src/services/ocr/: __init__.py  base.py  clova.py  ocrspace.py
agent/src/utils/: html_parser.py  logger.py
agent/src/utils/llm/: __init__.py  client.py
agent/src/utils/llm/formatters/: __init__.py  base.py  csv.py  json.py  markdown.py
agent/tests/: conftest.py  test_analyze_product_node.py  test_filter_images_node.py  test_ocr_node.py  test_summarize_page.py
agent/tests/fixtures/html/: naver_brand_product.html
agent/tests/integration/graphs/: test_graph_with_real_data.py
extension/: .env.example  CLAUDE.md  (+7 more)
(+100 files in other folders)
