[project]
name = "smartcompare-agent"
version = "0.1.0"
description = "LangGraph-based agent for SmartCompare product analysis"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.6.8",
    "langchain>=0.3.27",
    "langchain-core>=0.3.27",
    "fastapi>=0.118.2",
    "uvicorn>=0.37.0",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.6.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = ["-v"]

[project.scripts]
agent-server = "src.api.server:main"
